--- a/FitNesseRoot/RecentChanges.wiki
+++ b/FitNesseRoot/RecentChanges.wiki
@@ -1,4 +1,9 @@
-|HuntTheWompusFull.MoveDecisions.playerCanMoveInAllDirections||16:21:27 Thu, Feb 08, 2018|
+|HuntTheWompusFull.GameNotificationTests.VerifyNotificationMessagesOfBats||09:46:33 Fri, Feb 09, 2018|
+|HuntTheWompusFull.GameNotificationTests.VerifyNotificationMessagesWhenRickKillsPlayer||09:44:31 Fri, Feb 09, 2018|
+|HuntTheWompusFull.GameNotificationTests.VerifyNotificationMessageWhenPlayerKillsRick||09:37:03 Fri, Feb 09, 2018|
+|HuntTheWompusFull.GameNotificationTests||09:31:47 Fri, Feb 09, 2018|
+|HuntTheWompusFull.MoveDecisions.VerifyNotificationMessagesInMovementScenarios||09:20:28 Fri, Feb 09, 2018|
+|HuntTheWompusFull.MoveDecisions.playerCanMoveInAllDirections||09:10:55 Fri, Feb 09, 2018|
 |HuntTheWompusFull.MoveDecisions||15:59:43 Thu, Feb 08, 2018|
 |HuntTheWompusFull.WumbusTests.VerifyThatWumpusGeneratesAtStartPositionOnBottomCornerOfMap||15:42:17 Thu, Feb 08, 2018|
 |HuntTheWompusFull.WumbusTests.VerifyThatWumbusCannotMoveOffTheBoardInAnyDirection||15:42:08 Thu, Feb 08, 2018|
